--- a/design/style.css
+++ b/design/style.css
@@ -13,6 +13,10 @@ body{
     justify-content: center;
 }
 
+.no{
+   visibility:visible; 
+}
+
 .main-container{
     visibility:hidden;
     display: flex;
@@ -26,6 +30,10 @@ body{
 @media screen and (min-aspect-ratio: 1/1){
     .main-container{
         visibility: visible;
+    }
+    
+    .no{
+   visibility:hidden; 
     }
 }
 
